--- a/dev/index2.htm
+++ b/dev/index2.htm
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="crafty-min.js" type="text/javascript"></script>
     <!-- <script type="text/javascript" src="underscore-min.js" type="text/javascript"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>-->
-    <script type="text/javascript" src="game.js" type="text/javascript"></script>
+    <script type="text/javascript" src="game2.js" type="text/javascript"></script>
     <title>CS499 HTML5 Project</title>
     <style>
     body, html { margin:0; padding: 0; overflow:hidden; font-family:Arial; font-size:20pc
