Working on mouse/touch movements

--- a/dev/index.htm
+++ b/dev/index.htm
@@ -3,7 +3,7 @@
 <head>
     <script type="text/javascript">
         var ASPECT = 4/3, WIDTH=600, HEIGHT=800;
-        var scaleX, scaleY, newWidth, newHeight;
+        var scaleX, newWidth, newHeight, PAUSE_BOX=80;
         var IMG_STARBACK = "img/star_back.png",
                 IMG_STARMID = "img/star_mid.png",
                 IMG_STARFORE = "img/star_fore.png",
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>-->
     <!--<script type="text/javascript" src="game.js"></script>
     <script type="text/javascript" src="enemys.js"></script>-->
+    <script type="text/javascript" src="moveto.js"></script>
     <script type="text/javascript" src="player.js"></script>
     <script type="text/javascript" src="enemys.js"></script>
     <script type="text/javascript" src="start.js"></script>
