--- a/dev/index.htm
+++ b/dev/index.htm
@@ -15,7 +15,10 @@
                 IMG_TOUCHSPOT = "img/touchspot.png",
                 IMG_FIGHTER = "img/fighter.png",
                 IMG_LASER = "img/laser.png",
-                IMG_ENEMY = "img/enemy.png";
+                IMG_ENEMY = "img/enemy.png",
+                FIGHTER_SIZE = 64,
+                ENEMY_SIZE = 64,
+                LASER_SIZE = 64;
     </script>
     <script type="text/javascript" src="crafty-min.js"></script>
     <!-- <script type="text/javascript" src="underscore-min.js" type="text/javascript"></script>
@@ -25,6 +28,8 @@
     <script type="text/javascript" src="moveto.js"></script>
     <script type="text/javascript" src="player.js"></script>
     <script type="text/javascript" src="enemys.js"></script>
+    <script type="text/javascript" src="gamelevel.js"></script>
+    <script type="text/javascript" src="gameover.js"></script>
     <script type="text/javascript" src="start.js"></script>
     <script type="text/javascript" src="loading.js"></script>
     <link type="text/css" href="style.css" rel="stylesheet"/>
