2 enemy types, explosions, a few sounds....

--- a/dev/index.htm
+++ b/dev/index.htm
@@ -15,21 +15,24 @@
                 IMG_TOUCHSPOT = "img/touchspot.png",
                 IMG_FIGHTER = "img/fighter.png",
                 IMG_LASER = "img/laser.png",
-                IMG_ENEMY = "img/enemy.png",
+                IMG_ENEMY_BUG = "img/enemy_bug.png",
+                IMG_ENEMY_SHIP = "img/enemy_ship.png",
+                IMG_ENEMY_FIRE = "img/enemy_fire.png",
+                IMG_EXPLOSIONS = "img/explosion.png",
                 FIGHTER_SIZE = 64,
                 ENEMY_SIZE = 64,
-                LASER_SIZE = 64;
+                LASER_SIZE = 64,
+                mobile;
     </script>
     <script type="text/javascript" src="crafty-min.js"></script>
     <!-- <script type="text/javascript" src="underscore-min.js" type="text/javascript"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>-->
     <!--<script type="text/javascript" src="game.js"></script>
     <script type="text/javascript" src="enemys.js"></script>-->
-    <script type="text/javascript" src="moveto.js"></script>
+    <script type="text/javascript" src="explosions.js"></script>
     <script type="text/javascript" src="player.js"></script>
     <script type="text/javascript" src="enemys.js"></script>
     <script type="text/javascript" src="gamelevel.js"></script>
-    <script type="text/javascript" src="gameover.js"></script>
     <script type="text/javascript" src="start.js"></script>
     <script type="text/javascript" src="loading.js"></script>
     <link type="text/css" href="style.css" rel="stylesheet"/>
