--- a/dev/index.htm
+++ b/dev/index.htm
@@ -1,3 +1,12 @@
+<!-- Main html file
+This file declares constants and other variables used throughout the game code.
+It loads each of the javascript modules and then calls the load function (loading.js)
+when the page has finished loading.  It creates the initial stage for the
+crafty.js engine using the <div> tag in conjunction with "cr-stage"
+
+Authors: Zaid Mullins, Stephen Burgin, and Clint Woodson
+-->
+
 <!DOCTYPE html5>
 
 <meta name="viewport" content="width = device-width, initial-scale=1.0, user-scalable=no">
